fixed what was broken in comparison list in CSS

--- a/css/comparison.css
+++ b/css/comparison.css
@@ -17,11 +17,10 @@
    font-size: 1.1em;
 
 }
-#comparison-list
 .comp_show{
    display: block;
 }
-.comp_hidden{
+#comparison-list div.comp_hidden{
    display: none;
 }
 
